week-1-ASG-template.yml
AWSTemplateFormatVersion: '2010-09-09'
Metadata:
  License: Apache-2.0
Description: 'Auto scaling group of two EC2 instances'
Parameters:
  InstanceType:
    Description: WebServer EC2 instance type
    Type: String
    Default: t2.nano
    AllowedValues: [t2.nano, t2.micro, t2.small]
    ConstraintDescription: must be a valid EC2 instance type.
  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
  KeyName:
    ConstraintDescription: must be the name of EC2 KeyPair that is goint to be used on this instance
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
    Type: AWS::EC2::KeyPair::KeyName
    Default: test-key-pair
Resources:
  Subnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1a
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
      VpcId: !Ref VpcId
  # InternetGateway used to create VPCGatewayAttachment
  InternetGateway:
    Type: AWS::EC2::InternetGateway
  # VPCGatewayAttachment used to connect internet and VPC
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VpcId
  # RouteTable, Route, SubnetRouteTableAssociation were used to connect subnets with VCP which connects to internet gateway. 
  # possible that GatewayRouteTableAssociation can be used for simular purpose
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VpcId
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref PublicRouteTable
  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref Subnet
  myLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: !Sub ${AWS::StackName}-launch-template
      LaunchTemplateData:
        KeyName: !Ref KeyName
        ImageId: !Ref LatestAmiId
        InstanceType: !Ref InstanceType
        NetworkInterfaces:
          - DeviceIndex: 0
            AssociatePublicIpAddress: true
            Groups:
              - !Ref SSHSecurityGroup
              - !Ref WebSecurityGroup
              - !Ref PingSecurityGroup
            DeleteOnTermination: true
        UserData:
        # need to and flag -y, to finish install. Java version can be double checked > ssh into instance > java -version
          Fn::Base64:
            !Sub |
              #!/bin/bash
              sudo yum install -y java-1.8.0-openjdk
  SSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VpcId
      GroupDescription: Enables SSH access via port 22
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
  WebSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VpcId
      GroupDescription: Enables HTTP access via user defined port
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
  PingSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VpcId
      GroupDescription: Enables ping
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 8
          IpProtocol: ICMP
          ToPort: 8
  VpcId:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: True
      EnableDnsSupport: True
      InstanceTenancy: default
  myASG:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: !Sub ${AWS::StackName}-week-1
      LaunchTemplate:
        Version: !GetAtt myLaunchTemplate.LatestVersionNumber
        LaunchTemplateId: !Ref myLaunchTemplate
      MaxSize: 2
      MinSize: 2
      AvailabilityZones:
        - us-east-1a
      VPCZoneIdentifier:
        - !Ref Subnet
